Room numbers scroll

--- a/just_grid.html
+++ b/just_grid.html
@@ -36,29 +36,33 @@
       display: grid;
       grid-auto-columns: 80px;
       margin: 5px;
-      border: 1px solid green;
       padding: 5px;
     }
 
     .reservation {
+      white-space: nowrap;
+      overflow: hidden;
       margin: 5px;
       height: 30px;
-      border: 1px solid blue;
       padding: 5px;
     }
 
     .dateDiv {
-
+      text-align: center;
+      width: 80px;
+      margin: 5px;
+      padding: 5px;
     }
 
     .roomNum {
-
+      text-align: center;
+      margin-top: 5px;
+      margin-bottom: 5px;
+      z-index: 2;
     }
 
     .numText {
       background-color: white;
-      position: fixed;
-      height: 100%;
       z-index: 2;
     }
 
