Date boxes scroll, restructured functions

--- a/just_grid.html
+++ b/just_grid.html
@@ -40,6 +40,7 @@
     }
 
     .reservation {
+      position: relative;
       white-space: nowrap;
       overflow: hidden;
       margin: 5px;
@@ -50,8 +51,9 @@
     .dateDiv {
       text-align: center;
       width: 80px;
-      margin: 5px;
       padding: 5px;
+      z-index: 2;
+      justify-self: center;
     }
 
     .roomNum {
