--- a/just_grid.html
+++ b/just_grid.html
@@ -29,12 +29,10 @@
   <style media="screen">
     .grid_box {
       display: grid;
-      grid-auto-columns: 80px;
     }
 
     .room {
       display: grid;
-      grid-auto-columns: 80px;
       margin: 5px;
       padding: 5px;
     }
@@ -44,13 +42,11 @@
       white-space: nowrap;
       overflow: hidden;
       margin: 5px;
-      height: 30px;
       padding: 5px;
     }
 
     .dateDiv {
       text-align: center;
-      width: 80px;
       padding: 5px;
       z-index: 2;
       justify-self: center;
@@ -73,9 +69,6 @@
       height: 0px;
       justify-self: start;
       align-self: center;
-      border-top: 15px solid transparent;
-      border-bottom: 15px solid transparent;
-      border-right: 15px solid blue;
       z-index: 1;
     }
 
@@ -84,15 +77,12 @@
       height: 0px;
       justify-self: end;
       align-self: center;
-      border-top: 15px solid transparent;
-      border-bottom: 15px solid transparent;
-      border-left: 15px solid blue;
       z-index: 1;
     }
 
   </style>
 
-  <title>MLC Dorm Reservation</title>
+  <title>MLC Dorm Housing Calendar</title>
 
 </head>
 
