Implemented colors and improved comments

--- a/just_grid.html
+++ b/just_grid.html
@@ -9,7 +9,6 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="Assets/bootstrap/css/bootstrap.min.css">
 
-  <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="Assets/jquery-3.4.1.js"></script>
   <script src="Assets/popper.min.js"></script>
@@ -23,6 +22,8 @@
   <!-- Open Iconic -->
   <link href="Assets/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">
 
+
+  <!-- JS Script that builds/updates the calendar -->
   <script src="just_grid_logic.js"></script>
 
 
